[gd_scene load_steps=4 format=2]

[ext_resource path="res://Engine/TurnEngine/TurnEngine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tests/EntityTests/TurnEngineTests.gd" type="Script" id=2]
[ext_resource path="res://Debug/ContextDebug.tscn" type="PackedScene" id=3]

[node name="TurnEngineTests" type="Node2D"]
script = ExtResource( 2 )

[node name="ContextDebug" parent="." instance=ExtResource( 3 )]

[node name="EndTurn" type="Button" parent="."]
margin_left = 1021.0
margin_top = 155.0
margin_right = 1275.0
margin_bottom = 269.0
text = "Start Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTurn" type="Button" parent="."]
margin_left = 1017.0
margin_top = 302.0
margin_right = 1271.0
margin_bottom = 416.0
text = "Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnEngine" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="StartTurn" to="." method="_on_StartTurn_pressed"]
